PP_shitu/android/app/cxx/pp_shitu/app/.cxx/Debug/r26144w3/arm64-v8a/android_gradle_build_stdout_Native_arm64-v8a.txt
ninja: Entering directory `D:\python_proj\Paddle-Lite-Demo\PP_shitu\android\app\cxx\pp_shitu\app\.cxx\Debug\r26144w3\arm64-v8a'
[1/2] Building CXX object CMakeFiles/Native.dir/VectorSearch.cc.o
FAILED: CMakeFiles/Native.dir/VectorSearch.cc.o 
C:\Users\hesensen\AppData\Local\Android\Sdk\ndk\21.4.7075529\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe --target=aarch64-none-linux-android23 --gcc-toolchain=C:/Users/hesensen/AppData/Local/Android/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=C:/Users/hesensen/AppData/Local/Android/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/windows-x86_64/sysroot  -DNative_EXPORTS -ID:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/../../../PaddleLite/cxx/include -isystem D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/OpenCV/sdk/native/jni/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -std=c++11 -ffast-math -Ofast -Os -DNDEBUG -fexceptions -fomit-frame-pointer -fno-asynchronous-unwind-tables -fno-unwind-tables -fvisibility=hidden -fvisibility-inlines-hidden -fdata-sections -ffunction-sections -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/Native.dir/VectorSearch.cc.o -MF CMakeFiles\Native.dir\VectorSearch.cc.o.d -o CMakeFiles/Native.dir/VectorSearch.cc.o -c D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc
In file included from D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:13:
In file included from D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:54:
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/../IndexBinaryHash.h:16:10: error: 'IndexBinary.h' file not found with <angled> include; use "quotes" instead
#include <IndexBinary.h>
         ^~~~~~~~~~~~~~~
         "IndexBinary.h"
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/../IndexBinaryHash.h:17:10: error: 'IndexBinaryFlat.h' file not found with <angled> include; use "quotes" instead
#include <IndexBinaryFlat.h>
         ^~~~~~~~~~~~~~~~~~~
         "IndexBinaryFlat.h"
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/../IndexBinaryHash.h:18:10: error: 'impl/platform_macros.h' file not found with <angled> include; use "quotes" instead
#include <impl/platform_macros.h>
         ^~~~~~~~~~~~~~~~~~~~~~~~
         "impl/platform_macros.h"
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/../IndexBinaryHash.h:19:10: error: 'utils/Heap.h' file not found with <angled> include; use "quotes" instead
#include <utils/Heap.h>
         ^~~~~~~~~~~~~~
         "utils/Heap.h"
In file included from D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:13:
In file included from D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:55:
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/../IndexBinaryIVF.h:15:10: error: 'Clustering.h' file not found with <angled> include; use "quotes" instead
#include <Clustering.h>
         ^~~~~~~~~~~~~~
         "Clustering.h"
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/../IndexBinaryIVF.h:16:10: error: 'IndexBinary.h' file not found with <angled> include; use "quotes" instead
#include <IndexBinary.h>
         ^~~~~~~~~~~~~~~
         "IndexBinary.h"
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/../IndexBinaryIVF.h:17:10: error: 'IndexIVF.h' file not found with <angled> include; use "quotes" instead
#include <IndexIVF.h>
         ^~~~~~~~~~~~
         "IndexIVF.h"
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/../IndexBinaryIVF.h:18:10: error: 'utils/Heap.h' file not found with <angled> include; use "quotes" instead
#include <utils/Heap.h>
         ^~~~~~~~~~~~~~
         "utils/Heap.h"
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:478:23: error: call to 'read_index' is ambiguous
        ixpt->index = read_index(f, io_flags);
                      ^~~~~~~~~~
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:582:12: note: candidate function
    Index *read_index(IOReader *f, int io_flags)
           ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:19:8: note: candidate function
Index *read_index(IOReader *f, int io_flags)
       ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:492:29: error: call to 'read_index' is ambiguous
        idxrf->base_index = read_index(f, io_flags);
                            ^~~~~~~~~~
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:582:12: note: candidate function
    Index *read_index(IOReader *f, int io_flags)
           ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:19:8: note: candidate function
Index *read_index(IOReader *f, int io_flags)
       ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:493:31: error: call to 'read_index' is ambiguous
        idxrf->refine_index = read_index(f, io_flags);
                              ^~~~~~~~~~
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:582:12: note: candidate function
    Index *read_index(IOReader *f, int io_flags)
           ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:19:8: note: candidate function
Index *read_index(IOReader *f, int io_flags)
       ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:512:25: error: call to 'read_index' is ambiguous
        idxmap->index = read_index(f, io_flags);
                        ^~~~~~~~~~
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:582:12: note: candidate function
    Index *read_index(IOReader *f, int io_flags)
           ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:19:8: note: candidate function
Index *read_index(IOReader *f, int io_flags)
       ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:525:30: error: call to 'read_index' is ambiguous
        idxp->q1.quantizer = read_index(f, io_flags);
                             ^~~~~~~~~~
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:582:12: note: candidate function
    Index *read_index(IOReader *f, int io_flags)
           ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:19:8: note: candidate function
Index *read_index(IOReader *f, int io_flags)
       ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:550:28: error: call to 'read_index' is ambiguous
        idxhnsw->storage = read_index(f, io_flags);
                           ^~~~~~~~~~
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:582:12: note: candidate function
    Index *read_index(IOReader *f, int io_flags)
           ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:19:8: note: candidate function
Index *read_index(IOReader *f, int io_flags)
       ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:576:27: error: call to 'read_index' is ambiguous
        idxnsg->storage = read_index(f, io_flags);
                          ^~~~~~~~~~
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:582:12: note: candidate function
    Index *read_index(IOReader *f, int io_flags)
           ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:19:8: note: candidate function
Index *read_index(IOReader *f, int io_flags)
       ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:637:18: error: call to 'read_index' is ambiguous
    Index *idx = read_index(&reader, io_flags);
                 ^~~~~~~~~~
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:582:12: note: candidate function
    Index *read_index(IOReader *f, int io_flags)
           ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:19:8: note: candidate function
Index *read_index(IOReader *f, int io_flags)
       ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:656:19: error: call to 'read_index' is ambiguous
    this->index = read_index(fname, 0);
                  ^~~~~~~~~~
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/faiss/impl/index_read.cpp:1203:12: note: candidate function
    Index *read_index(const char *fname, int io_flags)
           ^
D:/python_proj/Paddle-Lite-Demo/PP_shitu/android/app/cxx/pp_shitu/app/src/main/cpp/VectorSearch.cc:634:8: note: candidate function
Index *read_index(const char *fname, int io_flags)
       ^
17 errors generated.
ninja: build stopped: subcommand failed.
